[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cliche"
version = "0.20.0"
description = "Fast CLI generator"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Pascal" }
]
dependencies = ["argcomplete"]

[project.optional-dependencies]
debug = ["ipdb"]
test = ["pytest", "pydantic", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[project.scripts]
cliche = "cliche.install:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["cliche"]
