[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cliche"
version = "0.22.1"
description = "Fast CLI generator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Pascal" }
]
keywords = ["cliche", "cli", "command-line", "argparse", "typer", "click", "fire"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = ["argcomplete"]

[project.urls]
Homepage = "https://github.com/kootenpv/cliche"
Repository = "https://github.com/kootenpv/cliche"
Issues = "https://github.com/kootenpv/cliche/issues"

[project.optional-dependencies]
debug = ["ipdb"]
test = ["pytest", "pydantic", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[project.scripts]
cliche = "cliche.install:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["cliche"]

# Hatchling's default include patterns inside `packages` skip non-Python
# files. The `artifacts` glob explicitly opts the per-platform clichec
# binary in. The pattern matches nothing on the fallback py3-none-any
# build (no binary present) — that's intentional and silent.
artifacts = ["cliche/_bin/clichec"]

# Ship the C source for the fast-fail launcher (clichec). Always present —
# even on platform-specific wheels — so a user can manually rebuild clichec
# if the bundled binary becomes incompatible (kernel ABI changes, glibc
# upgrades, etc). Recompile cost is ~0.5s on cc-equipped hosts.
#
# We deliberately do NOT force-include `cliche/_bin` here — hatchling already
# includes everything inside the `cliche/` package directory by default
# (Python files plus any data files). When `scripts/build_one_wheel.sh`
# drops a compiled `cliche/_bin/clichec` in before `python -m build`, hatch
# picks it up automatically. Adding it to force-include would create a
# duplicate entry in the wheel zip (UserWarning at build time).
#
# Also ship llms.txt at the wheel root so installed packages expose the
# LLM-oriented CLI guide (regenerated on each release from `cliche --llm-help`).
[tool.hatch.build.targets.wheel.force-include]
"cliche/clichec.c" = "cliche/clichec.c"
"llms.txt" = "llms.txt"

[tool.hatch.build.targets.sdist]
include = [
    "cliche",
    "tests",
    "README.md",
    "llms.txt",
    "pyproject.toml",
]
